third_party/rust/linkme/v0_3/crate/tests/ui/zerosized.stderr
error[E0080]: could not evaluate static initializer
 --> tests/ui/zerosized.rs:7:1
  |
7 | #[distributed_slice]
  | ^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'assertion failed: ::linkme::__private::mem::size_of::<<[Unit] as\n            ::linkme::__private::Slice>::Element>() > 0', $DIR/tests/ui/zerosized.rs:7:1
  |
  = note: this error originates in the macro `::linkme::__private::assert` (in Nightly builds, run with -Z macro-backtrace for more info)
